# debian-vifm

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  pauseme.1  vifm.1  vifm_0.2a.orig.tar.gz.delta  vifm_0.2a.orig.tar.gz.id  vifm_0.3.orig.tar.gz.delta  vifm_0.3.orig.tar.gz.id  vifm_0.3a.orig.tar.gz.delta  vifm_0.3a.orig.tar.gz.id  vifm_0.4.orig.tar.gz.delta  vifm_0.4.orig.tar.gz.id  vifm_0.7.4a.orig.tar.bz2.delta  vifm_0.7.4a.orig.tar.bz2.id  vifm_0.7.7.orig.tar.bz2.delta  vifm_0.7.7.orig.tar.bz2.id  vifm_0.7.8-beta.orig.tar.bz2.delta  vifm_0.7.8.orig.tar.bz2.delta  vifm_0.7.8.orig.tar.bz2.id  vifm_0.7.8~beta.orig.tar.bz2.delta  vifm_0.7.8~beta.orig.tar.bz2.id  vifm_0.8.1.orig.tar.bz2.delta  vifm_0.8.1.orig.tar.bz2.id  vifm_0.8.1a.orig.tar.bz2.delta  vifm_0.8.1a.orig.tar.bz2.id  vifm_0.8.orig.tar.bz2.delta  vifm_0.8.orig.tar.bz2.id
CVS/: Entries  Root
autom4te.cache/: output.0  requests  traces.0
debian/: README.Debian  README.Debian~  changelog  changelog.dch~  changelog~  clean  conffiles  conffiles~  control  control~  copyright  copyright~  docs  install  menu  postinst  postinst~  prerm  prerm~  rules  rules~  substvars  vifm.substvars  vim-vifm.yaml  watch  watch~
src/: .exrc  Makefile.am  Makefile.in  background.c  background.h  color_scheme.c  color_scheme.h  commands.c  commands.c~  commands.h  config.c  config.c~  config.h  file_info.c  filelist.c  filelist.h  fileops.c  fileops.h  filetype.c  keys.c  menus.c  menus.h  rline.c  screen-open-region-with-program  screen-run-program-in-region  signals.c  sort.c  status.h  tags  ui.c  ui.h  utils.c  utils.h  vifm-0.2.help.txt  vifm.c  vifmrc0.2  visual.c
src/CVS/: Entries  Repository
src/engine/: variables.h
src/modes/: modes.h
(+14 files in other folders)
