## Process this file with automake to produce Makefile.in

pkgdata_DATA = vifm-0.2.help.txt \
							 vifm.txt \
							 vifm.vim \
	vifmrc0.2

bin_PROGRAMS = vifm

bin_SCRIPTS = pauseme

vifm_SOURCES = \
	vifm.c \
	background.c background.h \
	bookmarks.c bookmarks.h \
	commands.c commands.h \
	config.c config.h \
	file_info.c file_info.h \
	filelist.c filelist.h \
	fileops.c fileops.h \
	filetype.c filetype.h \
	keys.c keys.h \
	menus.c menus.h \
	rline.c rline.h \
	search.c search.h \
	signals.c signals.h \
	sort.c sort.h\
	ui.c ui.h \
	utils.c utils.h \
	visual.c visual.h



